Refactor error handling documentation and examples for WaterUI
- Simplified error handling overview and removed unnecessary sections.
- Introduced `ErrorView` for rendering errors and improved customization options.
- Updated usage patterns for converting results to views and inline error handling.
- Added examples for creating custom error views and integrating with the environment.
- Enhanced accessibility documentation with examples for labels, roles, and states.
- Introduced i18n plugin example and improved internationalization documentation.
- Added canvas and shader sections with guidelines for custom renderers and shaders.
- Expanded internal documentation on rendering pipeline, layout system, and best practices for library authors.
- Updated introduction and summary sections to reflect new content and CLI usage.
- Added appendix for automation and troubleshooting in WaterUI workflows.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,8 +6,9 @@ edition = "2024"
 # Tutorial book for testing code examples with real WaterUI
 
 [dependencies]
-# Real WaterUI dependencies from the workspace
-waterui = { path = ".." }
+waterui = { path = "waterui" }
+waterui_form = { package = "waterui-form", path = "waterui/components/form" }
+waterui_derive = { package = "waterui-derive", path = "waterui/derive" }
 
 
 # Common dependencies
